[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sidekick/mario.png" type="Texture" id=1]
[ext_resource path="res://escenes/Buttons/B_Demo.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenes/Buttons/B_Uno.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenes/Buttons/B_Tres.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenes/Buttons/B_Dos.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/background/fondoa.jpg" type="Texture" id=6]
[ext_resource path="res://escenes/MainMenu.gd" type="Script" id=7]

[node name="Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.21606
margin_top = -1.0
margin_right = 2.21606
margin_bottom = -1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 300.0
margin_top = 100.0
margin_right = 724.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 424.0
margin_bottom = 32.0
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 36.0
margin_right = 424.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 424.0
margin_bottom = 364.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="Escenario Demo" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]

[node name="Escenario Uno" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 57.0
margin_bottom = 100.0

[node name="Escenario Dos" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 114.0
margin_bottom = 157.0

[node name="Escenario Tres" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 171.0
margin_bottom = 214.0
[connection signal="pressed" from="Menu/CenterRow/Buttons/Escenario Demo" to="." method="_on_Escenario_Demo_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Escenario Uno" to="." method="_on_Escenario_Uno_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Escenario Dos" to="." method="_on_Escenario_Dos_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Escenario Tres" to="." method="_on_Escenario_Tres_pressed"]
